force-app/main/default/objects/Contact/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <formula>TEXT(Height_Feet__c) &amp; &apos;Feet&apos; &amp;  TEXT(Height_Inches__c) &amp; &apos;Inches&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Height</label>
    <type>Text</type>
</CustomField>