force-app/main/default/objects/Contact/fields/Height_Feet__c.field-meta.xml
<CustomField>
    <fullName>Height_Feet__c</fullName>
    <label>Height Feet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>