force-app/main/default/objects/Contact/fields/Height_Inches__c.field-meta.xml
<CustomField>
    <fullName>Height_Inches__c</fullName>
    <label>Height Inches</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>