force-app/main/default/objects/Contact/fields/ServerId__c.field-meta.xml
<CustomField>
    <fullName>ServerId__c</fullName>
    <label>ServerId</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>