force-app/main/default/objects/Contact/recordTypes/FantasyPlayer.recordType-meta.xml
<RecordType>
    <fullName>FantasyPlayer</fullName>
    <active>true</active>
    <label>FantasyPlayer</label>
</RecordType>