force-app/main/default/objects/Contact/recordTypes/NBA_Player.recordType-meta.xml
<RecordType>
    <fullName>NBA_Player</fullName>
    <active>true</active>
    <description>NBA Players</description>
    <label>NBA Player</label>
</RecordType>